--- a/locales/de.json
+++ b/locales/de.json
@@ -95,7 +95,7 @@
       "address" : "Anschrift",
       "postalCode" : "Postleitzahl",
       "phone" : "Rufnummer",
-      "year": "JJJJ"
+      "year" : "JJJJ"
     }
   },
   "pages" : {
@@ -120,14 +120,14 @@
     "roulette" : "Roulette",
     "table" : "Tischspiele",
     "card" : "Kartenspiele",
-    "recent": "Letzte Spiele",
-    "new": "Neue Spiele"
+    "recent" : "Letzte Spiele",
+    "new" : "Neue Spiele"
   },
   "footer" : {
     "text" : {
-      "p1": "You understand that by participating in the games, you risk losing the money deposited to your account on www.ninecasino.com. In some jurisdictions, online gambling may be illegal. You understand and agree that www.ninecasino.com is not able to provide you legal advice or guarantees regarding the legality of your use of the services of the Website. The Company does not affirm that the services of the Website comply with legal requirements in your jurisdiction. You use the services provided by www.ninecasino.com of your own choice and at your sole discretion, as well, assuming the risk of liability, making a decision as to whether the use of the services of the Website is legal in accordance with the current legislation of your jurisdiction.You log in the Website and participate in the games at your own risk.",
-      "p2": "Copyright © 2020 www.ninecasino.com is operated by Scartesu Ltd., subsidiary of Dux Group N.V., by the laws of Cyprus acting as an Agent on behalf of Dux Group N.V., registered in Cyprus with registered address: Boumpoulinas 1, 3rd floor, flat/office 31, 1060, Nicosia, Cyprus, and registration No. ΗΕ 410983.The governing law of the website is Cyprus law. The website www.ninecasino.com is owned by Dux Group N.V., a company registered and established under the laws of Curaçao, with registration No. 155114 and registered address at Perseusweg 27A, Willemstad, Curaçao. Dux Group N.V. is licensed by the Government of Curaçao as an Information Provider legally authorised to conduct online gaming operations from Curaçao under license No. 8048/JAZ2020-075. Remote gaming licensing and supervision is provided by Antillephone N.V. It is the player’s sole responsibility to inquire about the existing laws and regulations of the given jurisdiction for online gambling.",
-      "p3": "If you have any questions or suggestions about our site, please contact us {support} or {phone}"
+      "p1" : "You understand that by participating in the games, you risk losing the money deposited to your account on www.ninecasino.com. In some jurisdictions, online gambling may be illegal. You understand and agree that www.ninecasino.com is not able to provide you legal advice or guarantees regarding the legality of your use of the services of the Website. The Company does not affirm that the services of the Website comply with legal requirements in your jurisdiction. You use the services provided by www.ninecasino.com of your own choice and at your sole discretion, as well, assuming the risk of liability, making a decision as to whether the use of the services of the Website is legal in accordance with the current legislation of your jurisdiction.You log in the Website and participate in the games at your own risk.",
+      "p2" : "Copyright © 2020 www.ninecasino.com is operated by Scartesu Ltd., subsidiary of Dux Group N.V., by the laws of Cyprus acting as an Agent on behalf of Dux Group N.V., registered in Cyprus with registered address: Boumpoulinas 1, 3rd floor, flat/office 31, 1060, Nicosia, Cyprus, and registration No. ΗΕ 410983.The governing law of the website is Cyprus law. The website www.ninecasino.com is owned by Dux Group N.V., a company registered and established under the laws of Curaçao, with registration No. 155114 and registered address at Perseusweg 27A, Willemstad, Curaçao. Dux Group N.V. is licensed by the Government of Curaçao as an Information Provider legally authorised to conduct online gaming operations from Curaçao under license No. 8048/JAZ2020-075. Remote gaming licensing and supervision is provided by Antillephone N.V. It is the player’s sole responsibility to inquire about the existing laws and regulations of the given jurisdiction for online gambling.",
+      "p3" : "If you have any questions or suggestions about our site, please contact us {support} or {phone}"
     }
   },
   "search" : {
@@ -149,7 +149,7 @@
     "wager" : "Umsatzanforderung",
     "created" : "geschaffen",
     "expiresAt" : "Läuft ab bei",
-    "noData": "Keine Daten verfügbar"
+    "noData" : "Keine Daten verfügbar"
   },
   "actions" : {
     "addCurrency" : "Währung hinzufügen"
@@ -199,7 +199,7 @@
     "allStatuses" : "Alle stände",
     "allCurrencies" : "Alle währungen",
     "until" : "bis",
-    "dataPlaceholder": "DD.MM.JJJJ"
+    "dataPlaceholder" : "DD.MM.JJJJ"
   },
   "cabinet" : {
     "pages" : {
@@ -284,8 +284,8 @@
         "phoneNumber" : "Rufnummer",
         "birthDate" : "Geburtsdatum"
       },
-      "updateSuccess": "Dein Profil wurde erfolgreich aktualisiert!",
-      "passwordUpdateSuccess": "Dein Passwort wurde erfolgreich geändert!"
+      "updateSuccess" : "Dein Profil wurde erfolgreich aktualisiert!",
+      "passwordUpdateSuccess" : "Dein Passwort wurde erfolgreich geändert!"
     },
     "limits" : {
       "initialText" : "Möchtest du deine Aktivität überwachen oder Verlust- oder Einzahlungslimits einrichten? Du kannst verschiedene Limits für dein Konto einrichten. Dies kann dir dabei helfen, einen Überblick über dein Glücksspiel zu behalten. Alle Einschränkungen treten sofort in Effekt.",
@@ -347,7 +347,7 @@
   "promotions" : {
     "title" : "Aktuelle Aktionen",
     "text" : "Ninecasino arbeitet ständig daran, die besten Aktionen zu liefern. Wir verwenden die neueste Technologie und das Feedback unserer Spieler, um unsere Aktionen zu gestalten. Viel Spaß!",
-    "upTo" : "bis zu 150 €",
+    "upTo" : "bis zu € 150 ",
     "deposit1" : {
       "title" : "100%<br/> des<br/> Einzahlungsbetrags <br/> ",
       "name" : "Bonus für die erste Einzahlung",
@@ -362,6 +362,41 @@
       "title" : "100%<br/> des<br/> Einzahlungsbetrags<br/>",
       "name" : "Bonus für dritte Einzahlung ",
       "text" : "Machen Sie Ihre dritte Einzahlung bei Ninecasino und erhalten Sie bis zu 150 €. <br/> <br/> Um den Bonus zu aktivieren, machen Sie einfach eine dritte Einzahlung von 20 € oder mehr. Der Bonus wird automatisch gutgeschrieben."
+    },
+    "dropsWins" : {
+      "title" : "Drops<span class=\"Colored\">&</span>wins<br/>Phase 4<br/>(Wochen 13–16)",
+      "name" : "Drops&wins turnier",
+      "text" : "DAS Turnier des Jahres! Willkommen zu Phase 4 (Wochen 13–16) der täglichen Netzwerkaktion Drops & Wins Network. <br/><br/>TDiese Woche besteht die Chance, ein Preisgeld in Höhe von insgesamt 2.500.000 € zu gewinnen."
     }
+  },
+  "dropsWins" : {
+    "prize" : "€ 2 500 000",
+    "text" : "DAS Turnier des Jahres! Willkommen zu Phase 4 (Wochen 13-16)der täglichen Netzwerkaktion Drops & Wins Network. Diese Woche besteht die Chance, ein Preisgeld in Höhe von insgesamt 2.500.000 € zu gewinnen. .<br/>Jeder Einsatz von echtem Geld in einer Ausspielung eines der teilnehmenden Spiele kann einen Zufallsgewinn auslösen! ",
+    "terms" : [
+      {
+        "title" : "Phase 4 läuft zwischen dem:",
+        "text" : "Woche 13: 6. Mai 2021 00:01 Uhr CET – 12. Mai 2021 23:59 Uhr CET.  Woche 14: 13. Mai 2021 00:01 Uhr CET – 19. Mai 2021 23:59 Uhr CET. Woche 15: 20. Mai 2021 00:01 Uhr CET – 26. Mai 2021 23:59 Uhr CET. Woche 16: 27. Mai 2021 00:01 Uhr CET – 2. Juni 2021 23:59 Uhr CET."
+      },
+      {
+        "title" : "Teilnehmende Spiele",
+        "text" : "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Joker's Jewels™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, The Hand of Midas™, Wild West Gold™, Gates of Olympus™, Congo Cash™, Fishin' Reels™, Power of Thor Megaways™, Floating Dragon™, Wild Booster™, Hot Fiesta™, Buffalo King Megaways™."
+      },
+      {
+        "title" : "Drops & Wins beinhaltet",
+        "text" : "Jedes Turnier läuft über sieben Tage, von Donnerstag bis Mittwoch, begleitet von täglichen Gewinnausschüttungen.\nDie größtmögliche WOCHENGEWINNSUMME der Phase 4 beläuft sich auf 31.000 Euro verteilt auf 550 Gewinnerinnen und Gewinner. \nDarüber hinaus besteht die Möglichkeit auf TÄGLICHE Geldgewinne aus dem Preistopf mit 4.500 Euro, die auf die 100 aktivsten Teilnehmerinnen und Teilnehmer verteilt werden."
+      },
+      {
+        "title" : "Wie man gewinnt ",
+        "text" : "Zur Teilnahme an dem Wochenturnier berechtigt ist, wer einen Echtgeldeinsatz in einem der teilnehmenden Spiele getätigt und mindestens einen (1) Gewinn in diesem Spiel erzielt hat.\nZur Teilnahme an dem Wochenturnier berechtigt ist, wer einen Echtgeldeinsatz in einem der teilnehmenden Spiele getätigt und mindestens einen (1) Gewinn in diesem Spiel erzielt hat. Für die Teilnahme an der täglichen Gewinnausschüttung besteht kein Mindesteinsatz in echtem Geld. Drops (Ausschüttungen in Gewinnmultiplikatorenwochen). "
+      },
+      {
+        "title" : "Zusätzlich",
+        "text" : "Während der Multiplikatorenwochen können Gewinne in Form eines in der Wochenturniergewinnübersicht (Gewinnmultiplikatorenwochen) und der Tagesausschüttungsübersicht weiter unten (im weiteren Textverlauf die „Gewinnmultiplikatorenwochen“) ausgewiesenen Vielfachen r des Einsatzes der erfolgreichen Spielerin bzw. des erfolgreichen Spielers erzielt werden.\nWenn der Gewinn in der erfolgreichen Ausspielung zehn Euro (10 €) übersteigt, erfolgt die Auszahlung des Gewinns auf der Grundlage eines Einsatzes von 10 Euro (10 €) oder umgerechnet in die jeweils geltende Währung (s. unten) multipliziert mit dem erworbenen Multiplikator x.\nDie Ermittlung der Ranglistenposition erfolgt entsprechend der Punktzahl für den höchsten Einzelgewinn in einer einzelnen Ausspielung in einem der teilnehmenden Spiele umgerechnet auf den jeweiligen Einsatz.\nSollten zwei (2) oder mehr Mitspielende ein Wochenturnier auf demselben Ranglistenplatz beenden, entfällt der höhere Gewinn auf die Spie"
+      }
+    ]
+  },
+  "tournaments" : {
+    "games" : "Teilnehmende Spiele",
+    "terms" : "Teilnahmebedingungen"
   }
 }
