NINE-435 replaced texts in locales

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -357,13 +357,13 @@
       "name": "Bonus ke třetímu vkladu",
       "text": "Proveďte třetí vklad na Ninecasino a získejte až Kč 3330 Abyste aktivovali bonus – jednoduše vložte € 20 nebo více. Bonus se vám přičte automaticky."
     },
-    "dropWins": {
+    "dropsWins": {
       "title": "Drops<span class=\"Colored\">&</span>wins<br/>Vítejte v 4<br/>(týdnů 13-16)",
       "name": "Drops&wins turnaje",
       "text": "Vítejte v 4. ( týdnů 13–16) fázi denní propagační akce pořádané sítí Drops & Wins. <br/><br/>Máte příležitost vyhrát hotovost v celkové výši 2 500 000 eur! <br/><br/>"
     }
   },
-  "dropWins": {
+  "dropsWins": {
     "prize": "€ 2 500 000",
     "text": "The main tournament of the year! Join Stage 4 (Weeks 13-16) of the promotion. Try your luck to win a cash prize of €2,500,000 in total! There are weekly and daily tournaments with generous prize pools.<br/>Every day you can get prizes in various popular slots from well-known Pragmatic Play™.",
     "textMobile": "Welcome new Drops & Wins Network Promotion! Try your luck to win a cash prize of €2 500 000 in total!",
