--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -26,7 +26,8 @@
     "goHomePage": "Go to the home page",
     "save": "Save",
     "edit": "Edit",
-    "getBonus": "Get bonus"
+    "getBonus": "Get bonus",
+    "more": "More"
   },
   "errors": {
     "required": "Can't be blank",
@@ -58,7 +59,6 @@
     "cantStart": "Can't start the game",
     "pleaseDeposit": "Please deposit first",
     "pleaseDepositText": "It's a pity, but your balance is 0. Deposit now!"
-
   },
   "auth": {
     "loginTitle": "Welcome back",
@@ -68,7 +68,7 @@
     "terms": "I am {minAge} years old and I accept the{br} {terms} and {policy}",
     "step2Title": "Please, fill the information below!",
     "thanksRegistration": "Thank you for registration",
-    "registrationBonus": "$225",
+    "registrationBonus": "$150",
     "registrationBonusText": "For your first deposit! Use advantage of Ninecasino Welcome Bonus",
     "getBonus": "Get your bonus",
     "enterEmail": "Enter email",
@@ -80,7 +80,7 @@
     "tryingConfirmEmail": "We're trying to verify your email",
     "confirmEmailError": "Sorry, you email was not confirmed",
     "confirmEmailSuccess": "Congratulations! Your email was successfully confirmed",
-    "bonus": "$225",
+    "bonus": "€ 150",
     "placeholders": {
       "enterEmail": "Enter your email",
       "enterPassword": "Enter your password",
@@ -102,7 +102,7 @@
   "pages": {
     "lobby": "Lobby",
     "myAccount": "My account",
-    "promotion": "Promotion",
+    "promotion": "Promotions",
     "aboutUs": "About us",
     "faq": "FAQ",
     "btc": "About BTC",
@@ -158,16 +158,16 @@
   "homepage": {
     "heroBanner": {
       "deposit1": {
-        "title": "Welcome <br/> package <span class=\"Colored\">$ 675!</span>",
-        "text": "Make first deposit<br/> and get <span class=\"Colored\">100%</span> up to <span class=\"Colored\">$ 225</span>"
+        "title": "Welcome <br/> package <span class=\"Colored\">$ 450!</span>",
+        "text": "Make first deposit<br/> and get <span class=\"Colored\">100%</span> up to <span class=\"Colored\">$ 150</span>"
       },
       "deposit2": {
         "title": "Second deposit<br/> bonus",
-        "text": "55% bonus<br/> up to <span class=\"Colored\">$225</span><br/> on your second deposit"
+        "text": "55% bonus<br/> up to <span class=\"Colored\">$150</span><br/> on your second deposit"
       },
       "deposit3": {
         "title": "Third deposit<br/> bonus",
-        "text": "100% bonus<br/> up to <span class=\"Colored\">$225</span><br/> on your third deposit"
+        "text": "100% bonus<br/> up to <span class=\"Colored\">$150</span><br/> on your third deposit"
       },
       "deposit4": {
         "title": "More exciting<br/> promotions<br/> coming soon!"
@@ -199,7 +199,8 @@
     "filteredBy": "Filtered by",
     "allStatuses": "All statuses",
     "allCurrencies": "All currencies",
-    "until": "Until"
+    "until": "Until",
+    "dataPlaceholder": "DD.MM.YYYY"
   },
   "cabinet": {
     "pages": {
@@ -348,21 +349,57 @@
   "promotions": {
     "title": "Current promotions",
     "text": "Ninecasino is constantly working to deliver the best promotions. We use the latest\n        technology and the feedback from our players to re-design our promotions. Enjoy!",
-    "upTo": "up to $225",
+    "upTo": "up to $150",
     "deposit1": {
       "title": "100%<br/> of the deposit<br/> amount",
       "name": "First deposit bonus",
-      "text": "Make your first deposit at Ninecasino and get up to $225.<br/><br/>To activate the bonus - just make first deposit of $30 or more. The bonus will be credited automatically."
+      "text": "Make your first deposit at Ninecasino and get up to $150.<br/><br/>To activate the bonus - just make first deposit of $20 or more. The bonus will be credited automatically."
     },
     "deposit2": {
       "title": "55%<br/> of the deposit<br/> amount",
       "name": "Second deposit bonus",
-      "text": "Make your second deposit at Ninecasino and get up to $225.<br/><br/>To activate the bonus - just make second deposit of $30 or more. The bonus will be credited automatically."
+      "text": "Make your second deposit at Ninecasino and get up to $150.<br/><br/>To activate the bonus - just make second deposit of $20 or more. The bonus will be credited automatically."
     },
     "deposit3": {
       "title": "100%<br/> of the deposit<br/> amount",
       "name": "Third deposit bonus",
-      "text": "Make your third deposit at Ninecasino and get up to $225.<br/><br/>To activate the bonus - just make third deposit of $30 or more. The bonus will be credited automatically."
+      "text": "Make your third deposit at Ninecasino and get up to $150.<br/><br/>To activate the bonus - just make third deposit of $20 or more. The bonus will be credited automatically."
+    },
+    "dropsWins": {
+      "title": "Drops<span class=\"Colored\">&</span>wins<br/>Stage 4<br/>(Weeks 13-16)",
+      "name": "Drops&wins tournament ",
+      "text": "The main tournament of the year! Join Stage 4 (Weeks 13-16) of the promotion. <br/><br/>Try your luck to win a cash prize of €2,500,000 in total!"
     }
+  },
+  "dropsWins": {
+    "prize": "€ 2 500 000",
+    "text": "The main tournament of the year! Join Stage 4 (Weeks 13-16) of the promotion. Try your luck to win a cash prize of €2,500,000 in total! There are weekly and daily tournaments with generous prize pools.<br/>Every day you can get prizes in various popular slots from well-known Pragmatic Play™.",
+    "textMobile": "Welcome new Drops & Wins Network Promotion! Try your luck to win a cash prize of €2 500 000 in total!",
+    "terms": [
+      {
+        "title": "Stage 4 runs between",
+        "text": "Week 13: 6th May 2021 00:01 CEST – 12th May 2021 23:59 CEST\nWeek 14: 13th May 2021 00:01 CEST – 19th May 2021 23:59 CEST\nWeek 15: 20th May 2021 00:01 CEST – 26th May 2021 23:59 CEST\nWeek 16: 27th May 2021 00:01 CEST – 2nd June 2021 23:59 CEST"
+      },
+      {
+        "title": "Games in this tournament",
+        "text": "Wolf Gold™, Mustang Gold™, Sweet Bonanza™, John Hunter and the Tomb of the Scarab Queen™, Great Rhino Megaways™, John Hunter and the Book of Tut™, The Dog House™, The Dog House Megaways™, Joker's Jewels™, Chilli Heat™, Fruit Party™, Big Bass Bonanza™, Madame Destiny Megaways™, Gems Bonanza™, Wild Wild Riches™, The Hand of Midas™, Wild West Gold™, Gates of Olympus™, Congo Cash™, Fishin' Reels™, Power of Thor Megaways™, Floating Dragon™, Wild Booster™, Hot Fiesta™, Buffalo King Megaways™. "
+      },
+      {
+        "title": "Drops & Wins includes",
+        "text": "Each Tournament runs for seven days from Thursday to Wednesday with daily Prize Drops in parallel.\nThe maximum WEEKLY prize pool of €31,000 in total will be shared between 550 winners.\nPlayers have an opportunity to win cash prizes in Daily prize drops with the €4,500 prize pool which will be shared between 20 of the most active participants."
+      },
+      {
+        "title": "How to win",
+        "text": "A player must place a real money bet on any of the participating games and must get at least one (1) in-game win to qualify for the Weekly Tournament. No minimum real money bet is required for players to be eligible to participate in the Daily Prize Drops (Prize Multiplier Weeks). "
+      },
+      {
+        "title": "Additionally",
+        "text": "Players participating during multiplier weeks may win prizes in the form of a multiplier of the winning player’s bet amount as set out in the Weekly Tournament (Prize Multiplier Weeks) Prize Table – and the Daily Prize Drop (Prize Multiplier Weeks) Prize Table further below (hereinafter the “Prize Multiplier Weeks”)\nIf the winning spin exceeds ten Euros (€ 10), the prize will be paid out based on a bet of ten Euros (€ 10) or the equivalent amount in the Available Currency (as defined further below) X multiplier received.\nThe leaderboard is ranked in accordance with the score, which score is based on the highest single spin win amount on any participating game adjusted to the amount of the bet.\nIn the event of two (2) or more players finishing a Weekly Tournament on the same leaderboard position, the player who has achieved the score first will receive the higher prize."
+      }
+    ]
+  },
+  "tournaments": {
+    "games": "Games in this tournament",
+    "terms": "Tournament terms and conditions"
   }
 }
