--- a/locales/en.json
+++ b/locales/en.json
@@ -369,8 +369,17 @@
       "title": "Drops<span class=\"Colored\">&</span>wins<br/>Stage 4<br/>(Weeks 13-16)",
       "name": "Drops&wins tournament ",
       "text": "The main tournament of the year! Join Stage 4 (Weeks 13-16) of the promotion. <br/><br/>Try your luck to win a cash prize of €2,500,000 in total!"
+    },
+    "playsonMay": {
+      "title": "Playson may<br/> cashdays",
+      "name": "Playson May CashDays",
+      "text": "Welcome another month and another CashDays 60k tournamentby the well-known provider.<br/><br/>The prize pool of 60,000 EUR is waiting for their winners."
     }
   },
+  "tournaments": {
+    "games": "Games in this tournament",
+    "terms": "Tournament terms and conditions"
+  } ,
   "dropsWins": {
     "prize": "€ 2 500 000",
     "text": "The main tournament of the year! Join Stage 4 (Weeks 13-16) of the promotion. Try your luck to win a cash prize of €2,500,000 in total! There are weekly and daily tournaments with generous prize pools.<br/>Every day you can get prizes in various popular slots from well-known Pragmatic Play™.",
@@ -398,8 +407,29 @@
       }
     ]
   },
-  "tournaments": {
-    "games": "Games in this tournament",
-    "terms": "Tournament terms and conditions"
+  "playsonMay": {
+    "prize": "€ 60 000",
+    "text": "Welcome another month and another CashDays 60k tournamentby the well-known provider. Playson knows how to treat its beloved players. The prize pool of 60,000 EUR is waiting for their winners.<br/>The tournament runs between 0:01 UTC on the 1st of May 2021 and 8th of May 2021 until 23:59 UTC.",
+    "textMobile": "Welcome another month and another CashDays 60k tournamentby the well-known provider.",
+    "terms": [
+      {
+        "text": "The tournament runs between 0:01 UTC on the 1st of May 2021 and 8th of May 2021 until 23:59 UTC."
+      },
+      {
+        "text": "There are 10 participating games:<br/>●  Book of Gold: Double Chance<br/>●  Book of Gold: Multichance<br/>●  Buffalo Power: Hold and Win<br/>●  Burning Wins: classic 5 lines<br/>●  Diamond Wins: Hold and Win<br/>●  Divine Dragon: Hold and Win<br/>●  Legend of Cleopatra MegawaysTM<br/>●  Solar Queen<br/>●  Solar Temple<br/>●  Wolf Power: Hold and Win"
+      },
+      {
+        "text": "Points are calculated round-by-round, with each 1 EUR (or currency equivalent) won equaling 10 points."
+      },
+      {
+        "text": "The minimum bet required to qualify is 0.50 EUR."
+      },
+      {
+        "text": "The munificent prize pool of 60,000 EUR will be shared between 350 lucky players."
+      },
+      {
+        "text": "The more points you earn, the higher your chances of winning are."
+      }
+    ]
   }
 }
