--- a/locales/en.json
+++ b/locales/en.json
@@ -27,7 +27,8 @@
     "save": "Save",
     "edit": "Edit",
     "getBonus": "Get bonus",
-    "more": "More"
+    "more": "More",
+    "checkBonuses": "Check bonuses"
   },
   "errors": {
     "required": "Can't be blank",
@@ -58,7 +59,9 @@
     "playGame": "Now you can play the game",
     "cantStart": "Can't start the game",
     "pleaseDeposit": "Please deposit first",
-    "pleaseDepositText": "It's a pity, but your balance is 0. Deposit now!"
+    "pleaseDepositText": "It's a pity, but your balance is 0. Deposit now!",
+    "wait": "Hey wait!",
+    "lockedByBonus": "There are still active bonuses on your account. In this case, the withdrawals are unavailable. Please check your profile and cancel all of them to make withdrawals."
   },
   "auth": {
     "loginTitle": "Welcome back",
